@@ -18,7 +18,7 @@
 ;; along with this program; if not, write to the Free Software
 ;; Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 ;;
-;; $Id: dbd_mysqllib.stub,v 1.1 2005/08/08 10:17:22 shiro Exp $
+;; $Id: dbd_mysqllib.stub,v 1.2 2005/08/16 21:45:12 shiro Exp $
 
 "
 #include \"dbd_mysql.h\"
@@ -67,6 +67,9 @@
 
 (define-cproc mysql-errno (connection::<mysql-handle>)
   (call <int> "mysql_errno"))
+
+(define-cproc mysql-fetch-field-names (result::<mysql-res>)
+  (call "MysqlFetchFieldNames"))
 
 (define-cproc mysql-fetch-row (result::<mysql-res>)
   (call "MysqlFetchRow"))
