@@ -1,3 +1,7 @@
+2005-08-16  Shiro Kawai  <shiro@acm.org>
+
+	* adapted to the relations framework.
+
 2005-08-08  Shiro Kawai  <shiro@acm.org>
 
 	* rewrote almost everything.  requires CVS HEAD of Gauche to build.
